--- a/roles/filetree_create/templates/gitlab_webhook.yml.j2
+++ b/roles/filetree_create/templates/gitlab_webhook.yml.j2
@@ -12,7 +12,7 @@
   tasks:
     - name: GitLab Webhook
       ansible.builtin.include_role:
-        name: gitlab_setup
+        name: automationiberia.casc_setup.gitlab_setup
         tasks_from: gitlab_webhook.yml
 {% endraw %}
 ...
